# rust-workshop-runner

./: Cargo.toml  README.md  index.html
artifacts/: index.html
changelog/: index.html
changelog/v0.2.2/: index.html
changelog/v0.2.3/: index.html
changelog/v0.2.5/: index.html
src/: lib.rs  main.rs
